# $Id$

Griffith ChangeLog
------------------
(c) 2005 Vasco Nunes

2005-11-09 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added a list to choose from when fetching big posters from Amazon.com and an exact match is not found.

2005-11-07 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Big posters fetched from Amazon are now previewed on built-in poster viewer.

2005-11-05 Piotr Ozarowski <ozarow@gmail.com>
	* Media names are now stored in database
	* Updated polish translation

2005-11-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* On darwin and win32 platforms the poster viewer should not use enter/leave events anymore. Pygtk seems buggy when handling these.
	* Added initial support to fetch bigger posters using Amazon Web Services. TODO: select poster to use when more than one found. Using the first one for now.
	* Added original Mark Pilgrim's amazon python wrapper to core distribution

2005-10-29 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added some HTML export plugin fixes for win32 compatibility
	* Added a minor change to sql module for win32 poster paths compatibility. Needs to be tested under *nix to see if nothing is broken.
	* win32 build should use now the libwimp widget engine for better windows visual integration

2005-10-27 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added some minor changes for win32 compatibility
	* Now Griffith's dir defaults to localized 'My Documents' dir on win32 environments

2005-10-27 Piotr Ozarowski <ozarow@gmail.com>
	* Volume/collection renaming is now possible
	* Volume/collection can now be selected in "add movie" window
	* Minor changes in volume/collection related code

2005-10-26 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added a winsetup.py file to be used by py2exe

2005-10-25 Piotr Ozarowski <ozarow@gmail.com>
	* Correct loans history is now displayed if movie belongs to
	collection

2005-10-24 Piotr Ozarowski <ozarow@gmail.com>
	* Loans are finally working correctly
	* Crush when no media is selected in add movie function - fixed
