@@ -24,6 +24,8 @@ from gettext import gettext as _
 import gutils
 import os
 import gtk
+import gc
+import gdebug
 
 def treeview_clicked(self):
 	if self.total:
@@ -131,8 +133,10 @@ def treeview_clicked(self):
 				else:
 					self.Image.set_from_file(os.path.join(self.locations['images'], "default.png"))
 					pixbuf = self.Image.get_pixbuf()
-			self.e_picture.set_from_pixbuf(gtk.gdk.pixbuf_new_from_file(image_path))
-
+			img_handler = self.e_picture.set_from_pixbuf(gtk.gdk.pixbuf_new_from_file(image_path))
+			del img_handler
+			garbaged = gc.collect()
+			gdebug.debug ("%s objects destroyed by cyclic garbage collector... nice"%str(garbaged))
 			if row['loaned']:
 				if row['collection_id'] > 0 and self.db.is_collection_loaned(row['collection_id']) == 1:
 					data_loan = self.db.get_loan_info(collection_id=row['collection_id'])
